test/string/unterminated.cipl.out
::stdout::

::stderr::
Error on line 1: End of file reached before a string terminates.
