test/string/unterminated.cipl
"This string does not terminate